--- a/Viper.xctemplate/TemplateInfo.plist
+++ b/Viper.xctemplate/TemplateInfo.plist
@@ -1,60 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>Kind</key>
-        <string>Xcode.IDEKit.TextSubstitutionFileTemplateKind</string>
-        <key>Summary</key>
-        <string>Empty Viper module containing View, Interactor, Presenter, Router, Wireframe</string>
-        <key>Platforms</key>
-        <array>
-            <string>com.apple.platform.iphoneos</string>
-            <string>com.apple.platform.macosx</string>
-        </array>
-        <key>SortOrder</key>
-        <integer>1</integer>
-        <key>Options</key>
-        <array>
-            <dict>
-                <key>Identifier</key>
-                <string>productName</string>
-                <key>Required</key>
-                <true/>
-                <key>Name</key>
-                <string>Module Name:</string>
-                <key>Description</key>
-                <string>The name of the Module</string>
-                <key>Type</key>
-                <string>text</string>
-                <key>Default</key>
-                <string>Module Name</string>
-                <key>RequiredOptions</key>
-                <dict>
-                    <key>Type</key>
-                    <array>
-                        <string>SwiftUI</string>
-                    </array>
-                </dict>
-            </dict>
-            <dict>
-                <key>Identifier</key>
-                <string>Type</string>
-                <key>Required</key>
-                <true/>
-                <key>Name</key>
-                <string>Module Type:</string>
-                <key>Description</key>
-                <string>The framework to create the module for</string>
-                <key>Type</key>
-                <string>popup</string>
-                <key>Default</key>
-                <string>SwiftUI</string>
-                <key>Values</key>
-                <array>
-                    <string>SwiftUI</string>
-                    <string>UIKit</string>
-                </array>
-            </dict>
-        </array>
-    </dict>
+<dict>
+	<key>Kind</key>
+	<string>Xcode.IDEKit.TextSubstitutionFileTemplateKind</string>
+	<key>Summary</key>
+	<string>Empty Viper module containing View, Interactor, Presenter, Router, Wireframe</string>
+	<key>Platforms</key>
+	<array>
+		<string>com.apple.platform.iphoneos</string>
+		<string>com.apple.platform.macosx</string>
+	</array>
+	<key>SortOrder</key>
+	<integer>1</integer>
+	<key>Options</key>
+	<array>
+		<dict>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Required</key>
+			<true/>
+			<key>Name</key>
+			<string>Module Name:</string>
+			<key>Description</key>
+			<string>The name of the Module</string>
+			<key>Type</key>
+			<string>text</string>
+			<key>Default</key>
+			<string>Module Name</string>
+		</dict>
+		<dict>
+			<key>Identifier</key>
+			<string>Type</string>
+			<key>Required</key>
+			<true/>
+			<key>Name</key>
+			<string>Framework:</string>
+			<key>Description</key>
+			<string>The framework to create the module for</string>
+			<key>Type</key>
+			<string>popup</string>
+			<key>Default</key>
+			<string>SwiftUI</string>
+			<key>Values</key>
+			<array>
+				<string>SwiftUI</string>
+				<string>UIKit</string>
+			</array>
+		</dict>
+	</array>
+</dict>
 </plist>
